--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,18 @@
         android:id="@+id/soundprocessseekBar"
         android:layout_gravity="center_horizontal" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add BookMark"
+        android:id="@+id/bookmark"
+        android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CheckBookMark"
+        android:id="@+id/checkbookmark"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
