--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -32,8 +32,10 @@
         android:text="CheckClipfile"
         android:id="@+id/checkclipfile"
         android:layout_alignTop="@+id/clipaudio"
-        android:layout_alignRight="@+id/showbookmark"
-        android:layout_alignEnd="@+id/showbookmark" />
+        android:layout_toRightOf="@+id/clipaudio"
+        android:layout_toEndOf="@+id/clipaudio"
+        android:layout_marginLeft="53dp"
+        android:layout_marginStart="53dp" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -42,5 +44,4 @@
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/checkclipfile"
         android:layout_alignStart="@+id/checkclipfile" />
-
 </RelativeLayout>
