--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout2"
     android:layout_width="match_parent"
@@ -7,55 +7,103 @@
     android:gravity="center_horizontal"
     tools:context=".MainActivity" >
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center" >
-
-        <Button
-            android:id="@+id/Play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Play" />
-
-        <Button
-            android:id="@+id/Pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pause" />
-
-        <Button
-            android:id="@+id/Stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Stop" />
-    </LinearLayout>
-    <SeekBar
-        android:id="@+id/SoundSeekBar"
-        android:layout_width="800dp"
-        android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="50" />
 
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/soundprocessseekBar"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_above="@+id/Pause"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add BookMark"
         android:id="@+id/bookmark"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/textView2"
+        android:layout_toStartOf="@+id/textView2"
+        android:layout_marginTop="50dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CheckBookMark"
         android:id="@+id/checkbookmark"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
 
-</LinearLayout>
+        android:layout_alignTop="@+id/bookmark"
+        android:layout_alignRight="@+id/Stop"
+        android:layout_alignEnd="@+id/Stop" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Volume:"
+        android:id="@+id/textView2"
+        android:layout_above="@+id/SoundSeekBar"
+        android:layout_centerHorizontal="true" />
+
+    <SeekBar
+        android:id="@+id/SoundSeekBar"
+        android:layout_width="800dp"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="50"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="78dp" />
+
+    <Button
+        android:id="@+id/Play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="▶"
+
+
+        android:layout_below="@+id/soundprocessseekBar"
+        android:layout_toLeftOf="@+id/Pause"
+        android:layout_toStartOf="@+id/Pause" />
+
+    <Button
+        android:id="@+id/Pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="||"
+
+        android:layout_alignTop="@+id/Stop"
+        android:layout_toRightOf="@+id/bookmark"
+        android:layout_toEndOf="@+id/bookmark" />
+
+    <Button
+        android:id="@+id/Stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="▆"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/Pause"
+        android:layout_toEndOf="@+id/Pause" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="music name"
+        android:id="@+id/musicname"
+        android:layout_above="@+id/soundprocessseekBar"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share"
+        android:id="@+id/buttonshare"
+        android:layout_above="@+id/textView2"
+        android:layout_alignRight="@+id/musicname"
+        android:layout_alignEnd="@+id/musicname" />
+
+</RelativeLayout>
