--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,56 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="zsd.example.com.soundspread.MainMenu">
-
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
-        android:layout_width="160dip"
+        android:layout_width="fill_parent"
         android:layout_height="160dip"
+        android:layout_weight=".50"
         android:text="Choose File to Clip"
+        android:textSize="10dp"
         android:id="@+id/choosefile"
         android:background="@drawable/button3"
-        android:layout_alignParentTop="true"
-
         android:layout_marginTop="60dp"
         android:textColor="#ffffff" />
 
     <Button
-        android:layout_width="160dip"
+        android:layout_width="fill_parent"
         android:layout_height="160dip"
+        android:layout_weight=".50"
         android:text="view my clips"
         android:id="@+id/viewclips"
-
+        android:textSize="10dp"
         android:background="@drawable/mainbutton2"
-        android:layout_alignTop="@+id/choosefile"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginTop="60dp"
         android:textColor="#ffffff"
         android:textColorHighlight="#ffffff" />
-
+    </LinearLayout>
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
-        android:layout_width="160dip"
+        android:layout_width="fill_parent"
         android:layout_height="160dip"
+        android:layout_weight="0.50"
         android:text="Download from Podcast"
         android:id="@+id/webbrowser"
-        android:layout_alignParentBottom="true"
+        android:textSize="10dp"
         android:textColor="#ffffff"
         android:background="@drawable/mainmenubutton"
         android:layout_marginBottom="60dp" />
 
     <Button
-        android:layout_width="160dip"
+        android:layout_width="fill_parent"
         android:layout_height="160dip"
+        android:layout_weight="0.50"
         android:text="About"
+        android:textSize="10dp"
         android:id="@+id/buttonabout"
         android:background="@drawable/button4"
-        android:layout_alignTop="@+id/webbrowser"
         android:textColor="#ffffff"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-</RelativeLayout>
+        android:layout_marginBottom="60dp" />
+    </LinearLayout>
+</LinearLayout>
