--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -16,7 +16,7 @@
         android:layout_width="fill_parent"
         android:layout_height="160dip"
         android:layout_weight=".50"
-        android:text="Choose File to Clip"
+        android:text="Clip File"
         android:textSize="15dp"
         android:id="@+id/choosefile"
         android:background="@drawable/button3"
@@ -42,7 +42,7 @@
         android:layout_width="fill_parent"
         android:layout_height="160dip"
         android:layout_weight="0.50"
-        android:text="Download Podcast"
+        android:text="Download"
         android:id="@+id/webbrowser"
         android:textSize="15dp"
         android:textColor="#ffffff"
