--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -13,9 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/showbookmark"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/shownextbookmark"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckClipfile"
+        android:text="View Clip File"
         android:id="@+id/checkclipfile"
         android:layout_alignTop="@+id/clipaudio"
         android:layout_toRightOf="@+id/clipaudio"
@@ -42,6 +42,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/shownextbookmark"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/checkclipfile"
-        android:layout_alignStart="@+id/checkclipfile" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
