--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,15 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".MainActivity" >
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="69dp"
+    android:layout_above="@+id/musicname"
+    android:layout_alignRight="@+id/Stop"
+    android:layout_alignEnd="@+id/Stop"
+    android:layout_marginRight="38dp"
+    android:layout_marginEnd="38dp"></LinearLayout>
 
     <SeekBar
         android:layout_width="match_parent"
@@ -56,10 +64,10 @@
         android:layout_height="wrap_content"
         android:max="100"
         android:progress="50"
+        android:layout_marginBottom="43dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="78dp" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/Play"
@@ -87,7 +95,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="▄"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="15dp"
+        android:layout_above="@+id/buttonshare"
         android:layout_toRightOf="@+id/Pause"
         android:layout_toEndOf="@+id/Pause" />
 
@@ -105,13 +114,21 @@
         android:layout_height="wrap_content"
         android:text="Share"
         android:id="@+id/buttonshare"
-        android:layout_marginTop="34dp"
-        android:layout_below="@+id/Pause"
         android:background="@drawable/mainmenubutton"
-        android:layout_toRightOf="@+id/Play"
-        android:layout_toLeftOf="@+id/Stop"
-        android:layout_toStartOf="@+id/Stop"
         android:textSize="12dp"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_above="@+id/textView2"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_marginBottom="19dp" />
+
+    <zsd.example.com.soundspread.VisualizerView
+        android:id="@+id/myvisualizerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/musicname"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/bookmark" />
 
 </RelativeLayout>
