add time information for the seekbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,20 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".MainActivity" >
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="69dp"
-    android:layout_above="@+id/musicname"
-    android:layout_alignRight="@+id/Stop"
-    android:layout_alignEnd="@+id/Stop"
-    android:layout_marginRight="38dp"
-    android:layout_marginEnd="38dp"></LinearLayout>
 
+    <zsd.example.com.soundspread.TextMoveLayout
+        android:id="@+id/textLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_above="@+id/soundprocessseekBar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/soundprocessseekBar"
         android:layout_gravity="center_horizontal"
-        android:layout_above="@+id/Pause"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -76,7 +74,7 @@
         android:text="▶"
 
 
-        android:layout_below="@+id/soundprocessseekBar"
+        android:layout_alignTop="@+id/Pause"
         android:layout_toLeftOf="@+id/Pause"
         android:layout_toStartOf="@+id/Pause" />
 
@@ -105,9 +103,10 @@
         android:layout_height="wrap_content"
         android:text="music name"
         android:id="@+id/musicname"
+        android:textStyle="bold"
         android:layout_above="@+id/soundprocessseekBar"
         android:layout_centerHorizontal="true"
-        android:textStyle="bold"/>
+        android:layout_marginBottom="47dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -126,9 +125,29 @@
         android:id="@+id/myvisualizerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/musicname"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/bookmark" />
+        android:layout_below="@+id/bookmark"
+        android:layout_above="@+id/musicname" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/starttime"
+        android:layout_below="@+id/soundprocessseekBar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/finishtime"
+        android:layout_alignTop="@+id/starttime"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp" />
 
 </RelativeLayout>
