--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,8 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+    <style name="ToolbarBackground">
+        <item name="android:background">#222233</item>
+    </style>
 
 </resources>
