--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -39,42 +39,6 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        style="@style/ToolbarBackground"
-        android:layout_width="fill_parent"
-        android:layout_height="62dip"
-        android:gravity="center" >
-
-        <ImageButton android:id="@+id/rew"
-            android:layout_width="64dip"
-            android:layout_height="52dip"
-            android:layout_marginTop="6dip"
-            android:layout_marginBottom="6dip"
-            style="@android:style/MediaButton"
-            android:contentDescription="rewind"
-            android:src="@android:drawable/ic_media_previous" />
-
-        <ImageButton android:id="@+id/play"
-            android:layout_width="71dip"
-            android:layout_height="52dip"
-            android:layout_marginTop="6dip"
-            android:layout_marginBottom="6dip"
-            style="@android:style/MediaButton"
-            android:contentDescription="play"
-            android:src="@android:drawable/ic_media_play" />
-
-        <ImageButton android:id="@+id/ffwd"
-            android:layout_width="64dip"
-            android:layout_height="52dip"
-            android:layout_marginRight="5dip"
-            android:layout_marginTop="6dip"
-            android:layout_marginBottom="6dip"
-            style="@android:style/MediaButton"
-            android:contentDescription="ffwd"
-            android:src="@android:drawable/ic_media_next" />
-
-    </LinearLayout>
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
@@ -105,6 +69,45 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+        <LinearLayout
+            style="@style/ToolbarBackground"
+            android:layout_width="fill_parent"
+            android:layout_height="62dip"
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <ImageButton android:id="@+id/rew"
+                android:layout_width="64dip"
+                android:layout_height="52dip"
+                android:layout_marginTop="6dip"
+                android:layout_marginBottom="6dip"
+                style="@android:style/MediaButton"
+                android:contentDescription="rewind"
+                android:src="@android:drawable/ic_media_previous" />
+
+            <ImageButton android:id="@+id/play"
+                android:layout_width="71dip"
+                android:layout_height="52dip"
+                android:layout_marginTop="6dip"
+                android:layout_marginBottom="6dip"
+                style="@android:style/MediaButton"
+                android:contentDescription="play"
+                android:src="@android:drawable/ic_media_play" />
+
+            <ImageButton android:id="@+id/ffwd"
+                android:layout_width="64dip"
+                android:layout_height="52dip"
+                android:layout_marginRight="5dip"
+                android:layout_marginTop="6dip"
+                android:layout_marginBottom="6dip"
+                style="@android:style/MediaButton"
+                android:contentDescription="ffwd"
+                android:src="@android:drawable/ic_media_next" />
+
+        </LinearLayout>
     </RelativeLayout>
 
 
