bug fixed spiral 4

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -16,7 +16,7 @@
         android:layout_width="fill_parent"
         android:layout_height="160dip"
         android:layout_weight=".50"
-        android:text="Clip File"
+        android:text="My Podcasts"
         android:textSize="15dp"
         android:id="@+id/choosefile"
         android:background="@drawable/button3"
@@ -27,7 +27,7 @@
         android:layout_width="fill_parent"
         android:layout_height="160dip"
         android:layout_weight=".50"
-        android:text="view my clips"
+        android:text="My clips"
         android:id="@+id/viewclips"
         android:textSize="15dp"
         android:background="@drawable/mainbutton2"
