--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
     android:background="#FFFFFF">
     <ImageView android:id="@+id/splashscreen" android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:src="@drawable/podcast"
+        android:src="@drawable/ic_launcher_app"
         android:layout_gravity="center"/>
 
     <LinearLayout android:layout_width="fill_parent"
@@ -23,7 +23,7 @@
         android:layout_alignParentEnd="true">
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="SOUND"
+        android:text="POD"
         android:layout_weight=".50"
         android:textStyle="bold"
         android:textColor="#f10002"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_weight=".50"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="SPREAD"
+        android:text="CUTS"
         android:id="@+id/textView"
         android:textColor="#F10002"
         android:textSize="30dp"
