--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,11 +21,12 @@
         android:layout_alignParentLeft="true" />
 
     <ImageView android:id="@+id/splashscreen" android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:src="@drawable/ic_launcher_app"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher"
 
-        android:layout_centerHorizontal="true"
-        android:layout_alignBottom="@+id/linearLayout" />
+        android:layout_marginBottom="73dp"
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
